fix path problem

--- a/algo_test/code_bloks_test/opencv_geometry_test/opencv_general/using_opencv_test/using_opencv_test.cbp
+++ b/algo_test/code_bloks_test/opencv_geometry_test/opencv_general/using_opencv_test/using_opencv_test.cbp
@@ -34,15 +34,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
-			<Add directory="../../../../../include" />
-			<Add directory="../../../../../src" />
+			<Add directory="../../../../../" />
 		</Compiler>
 		<Linker>
 			<Add library="/usr/local/lib/libopencv_core.so" />
 			<Add library="/usr/local/lib/libopencv_highgui.so" />
 			<Add directory="/usr/local/lib/" />
-			<Add directory="../../../../../include" />
-			<Add directory="../../../../../src" />
+			<Add directory="../../../../../" />
 		</Linker>
 		<Unit filename="main.cpp" />
 		<Unit filename="../../../../../include/geometry.h" />
