--- a/algo_test/code_bloks_test/general_geometry_test/geometry_general_test/geometry_general_test.cbp
+++ b/algo_test/code_bloks_test/general_geometry_test/geometry_general_test/geometry_general_test.cbp
@@ -13,10 +13,10 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="../../../../../neron" />
+					<Add directory="../../../../" />
 				</Compiler>
 				<Linker>
-					<Add directory="../../../../../neron" />
+					<Add directory="../../../../" />
 				</Linker>
 			</Target>
 			<Target title="Release">
