create test func for contour and few a little fix in some places

--- a/algo_test/code_bloks_test/opencv_geometry_test/opencv_general/using_opencv_test/using_opencv_test.cbp
+++ b/algo_test/code_bloks_test/opencv_geometry_test/opencv_general/using_opencv_test/using_opencv_test.cbp
@@ -59,6 +59,8 @@
 		<Unit filename="../../../../../src/util/math_equal.cpp" />
 		<Unit filename="../../../../../src/util/math_sort.cpp" />
 		<Unit filename="../../../../../src/util/smooth_signal.cpp" />
+		<Unit filename="../../../../../tests/geometry/contour/drowAndTurn.cpp" />
+		<Unit filename="../../../../../tests/geometry/contour/drowAndTurn.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
