repaired problem with finder border

--- a/algo_test/code_bloks_test/opencv_geometry_test/opencv_general/using_opencv_test/using_opencv_test.cbp
+++ b/algo_test/code_bloks_test/opencv_geometry_test/opencv_general/using_opencv_test/using_opencv_test.cbp
@@ -62,6 +62,8 @@
 		<Unit filename="../../../../../tests/geometry/circle/circle_drow_test.h" />
 		<Unit filename="../../../../../tests/geometry/contour/drowAndTurn.cpp" />
 		<Unit filename="../../../../../tests/geometry/contour/drowAndTurn.h" />
+		<Unit filename="../../../../../tests/geometry/line/line_drow_test.cpp" />
+		<Unit filename="../../../../../tests/geometry/line/line_drow_test.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
