--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,5 @@ cmake_minimum_required(VERSION 2.8)
 project(Neron CXX)
 
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
+
+set(SOURCE_EXE main.cpp)
