--- a/tests/util/math/probabilistic_law_build/probabilisic_build.cbp
+++ b/tests/util/math/probabilistic_law_build/probabilisic_build.cbp
@@ -13,7 +13,14 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="/media/general/src/neron_src/" />
 				</Compiler>
+				<ResourceCompiler>
+					<Add directory="/media/general/src/neron_src/" />
+				</ResourceCompiler>
+				<Linker>
+					<Add directory="/media/general/src/neron_src/" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/probabilisic_build" prefix_auto="1" extension_auto="1" />
@@ -32,7 +39,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="main.cpp" />
+		<Unit filename="../../../../include/util/math/probabilistic_functions.h" />
+		<Unit filename="../../../../src/util/math/probabilistic_functions.cpp" />
+		<Unit filename="prob_law_build.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
