repaired cmake for turn test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 
 set(SOURCE_ROOT ${CMAKE_SOURCE_DIR}/src)
 set(HEADERS ${CMAKE_SOURCE_DIR})
+set(TESTS ${CMAKE_SOURCE_DIR}/tests)
 
 find_package(OpenCV REQUIRED)
-message(STATUS ${OpenCV_FOUND})
 set( REQUIRED_LIBRARIES ${OpenCV_LIBS} ) 
 
 include_directories(${HEADERS})
@@ -27,12 +27,12 @@ aux_source_directory( ${SOURCE_ROOT}/map SOURCES )
 aux_source_directory( ${SOURCE_ROOT}/util/geometry SOURCES )
 aux_source_directory( ${SOURCE_ROOT}/util/math SOURCES )
 
-add_library(Neron SHARED ${SOURCES})
+add_library( Neron SHARED ${SOURCES} )
 target_link_libraries( Neron ${REQUIRED_LIBRARIES} )
 
 file( COPY ${HEADERS}/include DESTINATION ${CMAKE_BINARY_DIR} )
 
 #add_subdirectory(tests/geometry/intersection_test/ EXECUTABLE_OUTPUT_PATH)
-#add_subdirectory(tests/geometry/turn_test/ EXECUTABLE_OUTPUT_PATH)
+add_subdirectory( tests/util/geometry/turn_test/ EXECUTABLE_OUTPUT_PATH )
 #add_subdirectory(tests/map/create_map_test/ EXECUTABLE_OUTPUT_PATH)
 #add_subdirectory(tests/util/math/probabilistic_law_build/ EXECUTABLE_OUTPUT_PATH)
