add to link Neron lib and add dir for test

--- a/tests/util/geometry/turn_test/CMakeLists.txt
+++ b/tests/util/geometry/turn_test/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 
 project(turn_shape_test)
 
-message(STATUS ${TESTS})
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin/tests)
+
 set(TURN_SHAPE_TEST_SRC_ROOT ${TESTS}/util/geometry/turn_test/)
 
 include_directories(${HEADERS})
@@ -13,4 +14,4 @@ aux_source_directory( ${TURN_SHAPE_TEST_SRC_ROOT}/src TURN_SHAPE_TEST_SRC )
 
 add_executable(turn_shape_test ${TURN_SHAPE_TEST_SRC})
 
-target_link_libraries(turn_shape_test ${REQUIRED_LIBRARIES})
+target_link_libraries(turn_shape_test ${REQUIRED_LIBRARIES} Neron)
