correct type to static of tinyxml lib

--- a/other/CMakeLists.txt
+++ b/other/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_subdirectory( ${OTHER_LIB}/tinyxml )
-#/include( ${OTHER_LIB}/tinyxml )
-message( STATUS "other lib was included" )
+
+
+#message( STATUS "other lib was included" )
+#message(${NERON_TINY_XML_LIB_ROOT}) 
