--- a/other/tinyxml/CMakeLists.txt
+++ b/other/tinyxml/CMakeLists.txt
@@ -5,6 +5,5 @@ include_directories(${NERON_TINY_XML_LIB_ROOT})
 
 set( neron_tinyxml_include_dir ${NERON_TINY_XML_LIB_ROOT} )
 aux_source_directory( ${NERON_TINY_XML_LIB_ROOT}  NERON_TINYXML_SRC )
-message(${NERON_TINY_XML_LIB_ROOT}) 
 
-add_library( neron_tiny_xml_lib SHARED ${NERON_TINYXML_SRC} )
+add_library( neron_tiny_xml_lib STATIC ${NERON_TINYXML_SRC} )
