--- a/other/CMakeLists.txt
+++ b/other/CMakeLists.txt
@@ -1,4 +1,5 @@
-add_subdirectory( ${OTHER_LIB}/tinyxml )
+add_subdirectory( ${OTHER_LIB}/tinyxml  EXCLUDE_FROM_ALL )
+#include( ${OTHER_LIB}/tinyxml )
 
 
 #message( STATUS "other lib was included" )
