--- a/tests/util/geometry/turn_test/CMakeLists.txt
+++ b/tests/util/geometry/turn_test/CMakeLists.txt
@@ -8,9 +8,11 @@ include_directories(${HEADERS})
 include_directories(${TURN_SHAPE_TEST_SRC_ROOT})
 include_directories(${OpenCV_INCLUDE_DIR})
 
+list( APPEND REQUIRED_LIBRARIES Neron ) 
+
 aux_source_directory( ${TURN_SHAPE_TEST_SRC_ROOT}  TURN_SHAPE_TEST_SRC )
 aux_source_directory( ${TURN_SHAPE_TEST_SRC_ROOT}/src TURN_SHAPE_TEST_SRC )
 
 add_executable(turn_shape_test ${TURN_SHAPE_TEST_SRC})
 
-target_link_libraries(turn_shape_test ${REQUIRED_LIBRARIES} Neron)
+target_link_libraries( turn_shape_test  ${REQUIRED_LIBRARIES} )
